--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+Blog like application
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+1. Authentication system, users can sign-up, edit their profile, log in/logout
+2. Users can create articles, view articles, update articles.
+3. Users have permissions to delete ONLY their articles.
+4. User profile makes use of gravatar.
+5. Each article can have multiple categories
+6. Seeds file for categories
+7. Admin users have permissions above all users and articles. Can perform CRUD for articles, categories.
+8. Can view all categories and articles associated with them.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+HEROKU link:
+https://roralphablogz.herokuapp.com/
